k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-golang
spec:
  selector:
    app: my-golang
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
  type: ClusterIP
